CMakePresets.json: Add ${fileDir} macro

Fixes: #23214